# KadeAI

./: ARCHITECTURE.md  README.md  Reservations.html  Social-Club.html  home-5361.html  pyproject.toml
.kade_storage/: execution_history.json  memory.json  plans.json  radar_history.json  session.json
.kade_storage/tts/: 14791.txt
kade/: __init__.py  logging_utils.py  main.py
kade/backtesting/: __init__.py  engine.py  evaluator.py  metrics.py  models.py  replay_runner.py
kade/brain/: __init__.py  memory.py  models.py  plans.py  reasoning.py  style_profile.py  trade_idea.py
kade/chat/: __init__.py  formatter.py  models.py  parser.py  router.py  service.py
kade/config/: backtesting.yaml  brain.yaml  dashboard.yaml  execution.yaml  gameplan.yaml  history.yaml  llm.yaml  market_intelligence.yaml  market_state.yaml  news.yaml  personality.yaml  planning.yaml  radar_rules.yaml  review.yaml  storage.yaml  strategy.yaml  tickers.yaml  tracking.yaml  trading_rules.yaml  visuals.yaml  voice.yaml
kade/dashboard/: app.py
kade/execution/: __init__.py  guardrails.py  lifecycle.py  models.py  paper.py  workflow.py
kade/gameplan/: __init__.py  agenda.py  formatter.py  models.py  prioritizer.py  service.py
kade/integrations/: diagnostics.py  health.py  providers.py
kade/market/: __init__.py  alpaca_client.py  context_intelligence.py  indicators.py  market_loop.py  state_builder.py  structure.py
kade/news/: __init__.py
kade/options/: __init__.py  mock_chain.py  models.py  pipeline.py  scenario.py  selector.py  sizing.py
kade/planning/: __init__.py  builder.py  (+4 more)
(+139 files in other folders)
