[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kade"
version = "0.1.0"
description = "Local AI trading assistant skeleton"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["kade/tests"]
